package org.example.javakyrsach2.model;

public enum RelationType {
    INHERITANCE,
    IMPLEMENTATION,
    ASSOCIATION,
    DEPENDENCY
}
